# tiger-compiler

src/compiler_rewrite/: CMakeLists.txt  absyn.h  assem.c  assem.h  base.c  base.h  canon.c  codegen.c  codegen.h  codegenx86.c  codegenx86_64.c  codegenx86_64.h  color.c  color.h  errormsg.c  escape.h  flowgraph.h  frame.c  frame.h  graph.c  graph.h  lex.yy.c  liveness.c  liveness.h  main.c  makefile  regalloc.c  regalloc.h  runtime.c  semant.c  table.c  temp.c  temp.h  tiger.lex  tiger_parser.c  tiger_parser.h  translate.c  tree.c  tree.h  util.c  (+5 more)
src/compiler_rewrite/amd64/: amd64frame.c  amd64frame.h  codegenamd64.c  codegenamd64.h
src/compiler_rewrite/x86/: codegenx86.c  codegenx86.h  x86frame.c  x86frame.h
src/lab6b/: assem.c  frame.h  main.c  makefile  regalloc.h  runtime.c  x86frame.c
src/lab6b/testcases/: bsearch.tig
